--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
     "aos": "^3.0.0-beta.6",
+    "firebase": "8.5",
     "firebase-functions": "^4.4.1",
     "next": "^13.4.4",
     "react": "18.2.0",
+    "react-client": "^1.0.1",
     "react-dom": "18.2.0",
     "typescript": "^5.0.4"
   },
